samples/_failures_safe/1761092458_dbb11e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_988911a1.c: In function ‘main’:
./samples/SAFE/__tmp_988911a1.c:146:23: error: expected ‘;’ at end of input
  146 |                 printf
      |                       ^
      |                       ;
./samples/SAFE/__tmp_988911a1.c:146:17: error: expected declaration or statement at end of input
  146 |                 printf
      |                 ^~~~~~
./samples/SAFE/__tmp_988911a1.c:146:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_988911a1.c:146:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_988911a1.c:146:17: error: expected declaration or statement at end of input
